<resources>
    <string name="app_name">Odyssey Survey</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Details</string>
    <string name="second_fragment_label">Odyssey Experience</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

<!--    For first fragment      -->
    <string name="name_text">Name: </string>
    <string name="role_text">Role: </string>
    <string name="name_hint">Enter your name</string>
    <string name="role_hint">Audience/Participant</string>
    <string-array name="roles_hintArray">
        <item>Audience</item>
        <item>Participant</item>
    </string-array>

<!--    For second fragment     -->
    <string name="events_string">Odyssey Events</string>
    <string name="music_text">Music</string>
    <string name="dance_text">Dance</string>
    <string name="play_text">Play</string>
    <string name="fashion_text">Fashion</string>
    <string name="food_text">Food</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>