<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/events_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/events_string"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/music_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/dance_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dance_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/play_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/fashion_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fashion_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/food_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/previous" />
</LinearLayout>