<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_anchorGravity="center|center_vertical"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:autoText="true"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/role_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_text"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/role_autoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/role_hint" />

        <!--        <EditText-->
<!--            android:id="@+id/role_editText"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="15dp"-->
<!--            android:layout_weight="1"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/role_hint"-->
<!--            android:inputType="textPersonName" />-->

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        android:text="@string/next" />

</LinearLayout>